# befsd

./: .envrc  .gitignore  Cargo.toml  flake.nix
.sqlx/: query-029d9a20e492de682d19a32257b40634947c2b4da9e1bda4be25ad7582a07626.json  query-5799acd307de0cfc46df9706712f4270a6656045b2193b42aab66840a9182ae6.json  query-78bb261e7c283b52ed97569f63d6f941ca3253346f6a9ddd4fc0b50c358450bd.json  query-7b5f57b32d9e6da20ff563dbee9c4b6b18c2d140d181a56656abdbce2821788a.json  query-bf0ee0f68e3cee24be15f3a7cd7401856c8be63ed8ae0147503c720cb4d5f2f0.json  query-e05bf17f70bc1c8df4140842efab3f00c40f34394b6bf10caeaf633b5675b372.json  query-f0e77de0769ecaeb176972003cf4b90e9ac8fb7ad46411d30feb49117cd4f0c1.json  query-f371838374b3385bef9eb6e85a12d7bdb1db0b434f9eaf770599f6a7d687c5db.json
migrations/: 20231124182303_create_directories_to_watch.sql  20231125191129_create_files_table.sql  20231126182250_create_chunks_table.sql
src/: file_server.rs  ipc.rs  main.rs  watcher.rs
